[project]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Tatiana Konischeva",email = "moyzaldi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selene (>=1.0.2,<2.0.0)",
    "pytest (>=8.3.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"

